Monitoring/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo
spec:
  hosts:
  - "*"
  gateways:
  - todo-gateway
  http:
  - match:
    - uri:
        prefix: /todo
    route:
    - destination:
        host: backend
        port:
          number: 3000
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        port:
          number: 3000
